Небольшие поправочки добавил

--- a/index.html
+++ b/index.html
@@ -172,7 +172,6 @@
         </div>
 
         <section class="index-catalog-section">
-          <!-- В защиту того, что некоторые изображения товаров на карточках в верстке расходятся в расположении с макетом скажу, что изображения с макета взяты "как есть" и центрированы относительно своего контейнера. Вероятно, в макете эти изображения вставлялись "на глаз" и имеют неидеальную центровку. Подгонять отдельные картинки под макет с помощью css-свойств считаю излишним.  -->
           <div class="catalog-section-header">
             <h2 class="catalog-section-title">Популярные товары:</h2>
             <a class="button" href="404.html">Все популярные товары</a>
@@ -188,7 +187,7 @@
                 </div>
               </div>
               <div class="product-card-previews"> 
-                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-9000.jpg" alt="Перфоратор с вертикальным расположением двигателя работающий от сети" width="184" height="164"></a>
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-9000.jpg" alt="Перфоратор с вертикальным расположением двигателя работающий от сети" width="218" height="174"></a>
               </div>
               <div class="product-card-buttons">
                 <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
@@ -204,7 +203,7 @@
                 </div>
               </div>
               <div class="product-card-previews"> 
-                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Небольшой аккумуляторный перфоратор" width="127" height="112"></a>
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
               </div>
               <div class="product-card-buttons">
                 <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
@@ -220,7 +219,7 @@
                 </div>
               </div>
               <div class="product-card-previews"> 
-                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Небольшой аккумуляторный перфоратор" width="144" height="128"></a>
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
               </div>
               <div class="product-card-buttons">
                 <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
@@ -235,7 +234,7 @@
                 </div>
               </div>
               <div class="product-card-previews"> 
-                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Небольшой аккумуляторный перфоратор" width="127" height="112"></a>
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
               </div>
               <div class="product-card-buttons">
                 <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
@@ -254,14 +253,14 @@
           </div>
 
           <ul class="index-catalog-list brands">
-            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/bosch.png" alt="Продукция производителя Bosch" width="126" height="37"></a></li>
-            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/makita.png" alt="Продукция производителя Makita" width="123" height="40"></a></li>
-            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/dewalt.png" alt="Продукция производителя DeWalt" width="146" height="44"></a></li>
-            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/interskol.png" alt="Продукция производителя Интерскол" width="200" height="76"></a></li>
-            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/hitachi.png" alt="Продукция производителя Hitachi" width="169" height="31"></a></li>
-            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/lg.png" alt="Продукция производителя LG" width="121" height="73"></a></li>
-            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/aeg.png" alt="Продукция производителя AEG" width="151" height="96"></a></li>
-            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/metabo.png" alt="Продукция производителя Metabo" width="204" height="69"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/bosch.png" alt="Продукция производителя Bosch" width="218" height="143"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/makita.png" alt="Продукция производителя Makita" width="218" height="143"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/dewalt.png" alt="Продукция производителя DeWalt" width="218" height="143"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/interskol.png" alt="Продукция производителя Интерскол" width="218" height="143"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/hitachi.png" alt="Продукция производителя Hitachi" width="218" height="143"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/lg.png" alt="Продукция производителя LG" width="218" height="143"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/aeg.png" alt="Продукция производителя AEG" width="218" height="143"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/metabo.png" alt="Продукция производителя Metabo" width="218" height="143"></a></li>
           </ul>
 
         </section>
@@ -386,7 +385,7 @@
             <li class="footer-socials-item">
               <a href="https://vk.com/denistugov" target="_blank">
                 <span class="visually-hidden">Вконтакте</span>
-                <svg width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
+                <svg class="social-button-icon" width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
                   <circle class="social-button-bg" cx="22" cy="22" r="20.33"/>
                   <path d="M24.5403 25.7281C25.4609 25.4384 26.6395 27.6406 27.8943 28.4834C28.836 29.1219 29.5573 28.9841 29.5573 28.9841L32.9017 28.9372C32.9017 28.9372 34.6495 28.8322 33.8232 27.4803C33.7549 27.3678 33.3389 26.4781 31.334 24.6472C29.2376 22.7319 29.5217 23.0422 32.0456 19.7309C33.5835 17.7125 34.1988 16.4797 34.0062 15.9547C33.8213 15.4494 32.6918 15.5806 32.6918 15.5806L28.9237 15.6059C28.5568 15.6069 28.2458 15.7175 28.1042 16.0887C28.1013 16.0925 27.5062 17.6506 26.7127 18.9753C25.0362 21.7775 24.3669 21.9266 24.0896 21.7512C23.4531 21.3453 23.6139 20.1228 23.6139 19.2537C23.6139 16.5378 24.0299 15.4053 22.7992 15.1128C22.388 15.0153 22.0876 14.9516 21.0389 14.9422C19.6985 14.9225 18.5603 14.9422 17.9151 15.2506C17.4866 15.4597 17.1582 15.9181 17.3575 15.9444C17.6079 15.9772 18.1693 16.0944 18.4697 16.4937C18.8559 17.0112 18.8443 18.1709 18.8443 18.1709C18.8443 18.1709 19.0649 21.3687 18.3243 21.7653C17.8159 22.0372 17.1206 21.4822 15.6252 18.9378C14.8615 17.6366 14.2847 16.1984 14.2847 16.1984C14.2847 16.1984 14.173 15.9312 13.9708 15.785C13.73 15.6116 13.393 15.5562 13.393 15.5562L9.81656 15.5787C9.81656 15.5787 9.27923 15.5937 9.08182 15.8244C8.90656 16.0287 9.06738 16.4506 9.06738 16.4506C9.06738 16.4506 11.8686 22.9016 15.0406 26.1509C17.9488 29.1341 21.2537 28.9362 21.2537 28.9362H22.7511C22.7511 28.9362 23.2027 28.8856 23.4338 28.6437C23.6495 28.4187 23.6399 27.9959 23.6399 27.9959C23.6399 27.9959 23.61 26.0187 24.5403 25.7281Z" fill="#fff"/>
                 </svg>
@@ -395,7 +394,7 @@
             <li class="footer-socials-item">
               <a href="https://www.facebook.com/denis.tugov" target="_blank">
                 <span class="visually-hidden">Фейсбук</span>
-                <svg width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
+                <svg class="social-button-icon" width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
                   <circle class="social-button-bg" cx="22" cy="22" r="20.33"/>
                   <path d="M28 15v-4h-4a4 4 0 00-4 4v4h-4v4h4v10h4V23h4v-4h-4v-4z" fill="#fff"/>
                 </svg>
@@ -404,7 +403,7 @@
             <li class="footer-socials-item">
               <a href="https://www.instagram.com/den0015" target="_blank">
                 <span class="visually-hidden">Инстаграм</span>
-                <svg width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
+                <svg class="social-button-icon" width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
                   <circle class="social-button-bg" cx="22" cy="22" r="20.33"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M14 11h15a3 3 0 013 3v15a3 3 0 01-3 3H14a3 3 0 01-3-3V14a3 3 0 013-3zm11 10.5a3.5 3.5 0 10-7 0 3.5 3.5 0 007 0zM14 29v-9h1.18a6.5 6.5 0 1012.64 0H29v9H14zm11-11h4v-4h-4v4z" fill="#fff"/>
                 </svg>
