--- a/catalog.html
+++ b/catalog.html
@@ -206,6 +206,8 @@
 
         <section class="catalog-wrap">
 
+          <h2 class="visually-hidden">Список перфораторов</h2>
+
           <article class="product-card">
             <div class="product-card-info">
               <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
@@ -218,7 +220,7 @@
               <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
             </div>
             <div class="product-card-buttons">
-              <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
+              <a class="card-button buy" href="404.html" aria-label="Добавить товар в корзину"><span class="card-button-buy-label">Купить</span></a>
               <a class="card-button add-favorite" href="404.html" aria-label="Добавить товар в закладки">В закладки</a>
             </div>
           </article>
@@ -235,7 +237,7 @@
               <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
             </div>
             <div class="product-card-buttons">
-              <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
+              <a class="card-button buy" href="404.html" aria-label="Добавить товар в корзину"><span class="card-button-buy-label">Купить</span></a>
               <a class="card-button add-favorite" href="404.html" aria-label="Добавить товар в закладки">В закладки</a>
             </div>
           </article>
@@ -252,7 +254,7 @@
               <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
             </div>
             <div class="product-card-buttons">
-              <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
+              <a class="card-button buy" href="404.html" aria-label="Добавить товар в корзину"><span class="card-button-buy-label">Купить</span></a>
               <a class="card-button add-favorite" href="404.html" aria-label="Добавить товар в закладки">В закладки</a>
             </div>
           </article>
@@ -269,7 +271,7 @@
               <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
             </div>
             <div class="product-card-buttons">
-              <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
+              <a class="card-button buy" href="404.html" aria-label="Добавить товар в корзину"><span class="card-button-buy-label">Купить</span></a>
               <a class="card-button add-favorite" href="404.html" aria-label="Добавить товар в закладки">В закладки</a>
             </div>
           </article>
@@ -286,7 +288,7 @@
               <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
             </div>
             <div class="product-card-buttons">
-              <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
+              <a class="card-button buy" href="404.html" aria-label="Добавить товар в корзину"><span class="card-button-buy-label">Купить</span></a>
               <a class="card-button add-favorite" href="404.html" aria-label="Добавить товар в закладки">В закладки</a>
             </div>
           </article>
@@ -302,7 +304,7 @@
               <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
             </div>
             <div class="product-card-buttons">
-              <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
+              <a class="card-button buy" href="404.html" aria-label="Добавить товар в корзину"><span class="card-button-buy-label">Купить</span></a>
               <a class="card-button add-favorite" href="404.html" aria-label="Добавить товар в закладки">В закладки</a>
             </div>
           </article>
@@ -319,7 +321,7 @@
               <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
             </div>
             <div class="product-card-buttons">
-              <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
+              <a class="card-button buy" href="404.html" aria-label="Добавить товар в корзину"><span class="card-button-buy-label">Купить</span></a>
               <a class="card-button add-favorite" href="404.html" aria-label="Добавить товар в закладки">В закладки</a>
             </div>
           </article>
@@ -336,7 +338,7 @@
               <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
             </div>
             <div class="product-card-buttons">
-              <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
+              <a class="card-button buy" href="404.html" aria-label="Добавить товар в корзину"><span class="card-button-buy-label">Купить</span></a>
               <a class="card-button add-favorite" href="404.html" aria-label="Добавить товар в закладки">В закладки</a>
             </div>
           </article>
@@ -352,7 +354,7 @@
               <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Небольшой аккумуляторный перфоратор" width="218" height="174"></a>
             </div>
             <div class="product-card-buttons">
-              <a class="card-button buy" href="404.html"><span class="card-button-buy-label" aria-label="Добавить товар в корзину">Купить</span></a>
+              <a class="card-button buy" href="404.html" aria-label="Добавить товар в корзину"><span class="card-button-buy-label">Купить</span></a>
               <a class="card-button add-favorite" href="404.html" aria-label="Добавить товар в закладки">В закладки</a>
             </div>
           </article>
