Предзащитная проверка — исправление замечаний

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
           <ul class="footer-socials">
             <li class="footer-socials-item">
-              <a href="https://vk.com/denistugov" target="_blank">
+              <a class="footer-socials-link" href="https://vk.com/denistugov" target="_blank">
                 <span class="visually-hidden">Вконтакте</span>
                 <svg class="social-button-icon" width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
                   <circle class="social-button-bg" cx="22" cy="22" r="20.33"/>
@@ -392,7 +392,7 @@
               </a>
             </li>
             <li class="footer-socials-item">
-              <a href="https://www.facebook.com/denis.tugov" target="_blank">
+              <a class="footer-socials-link" href="https://www.facebook.com/denis.tugov" target="_blank">
                 <span class="visually-hidden">Фейсбук</span>
                 <svg class="social-button-icon" width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
                   <circle class="social-button-bg" cx="22" cy="22" r="20.33"/>
@@ -401,7 +401,7 @@
               </a>
             </li>
             <li class="footer-socials-item">
-              <a href="https://www.instagram.com/den0015" target="_blank">
+              <a class="footer-socials-link" href="https://www.instagram.com/den0015" target="_blank">
                 <span class="visually-hidden">Инстаграм</span>
                 <svg class="social-button-icon" width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
                   <circle class="social-button-bg" cx="22" cy="22" r="20.33"/>
@@ -436,7 +436,7 @@
         </p>
         <p class="write-us-form-field-item textarea">
           <label class="write-us-form-label" for="message-text">Текст письма:</label>
-          <textarea class="write-us-form-field" id="message-text" name="message" rows="6" placeholder="В свободной форме"></textarea>
+          <textarea class="write-us-form-field write-us-textarea-field" id="message-text" name="message" rows="6" placeholder="В свободной форме"></textarea>
         </p>
       </div>
       <div class="write-us-form-submit-wrap">
