Защита проекта — исправление замечаний

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
         <section class="index-catalog-section">
 
-          <div class="catalog-section-header">
+          <div class="catalog-section-header popular-brands">
             <h2 class="catalog-section-title">Популярные производители:</h2>
             <a class="button" href="404.html">Все производители</a>
           </div>
