--- a/catalog.html
+++ b/catalog.html
@@ -189,7 +189,7 @@
             <a class="catalog-sort-link-item" href="catalog?sort=function">По функционалу</a>
           </div>
           <div class="catalog-order-nav">
-            <a class="catalog-order-nav-item" href="catalog?order=ASC">
+            <a class="catalog-order-nav-item current-item" href="catalog?order=ASC">
               <svg class="order-nav-icon" width="12" height="10" viewBox="0 0 12 10" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
                 <path d="M5.66241 0L11.1624 10L0.162415 10"/>
               </svg>
